--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "googleapis": "^122.0.0",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
-    "stripe": "^12.13.0"
+    "stripe": "^12.13.0",
+    "uuid": "^9.0.0"
   }
 }
