--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
     "closure-library": "^1.43629075.2",
+    "colorette": "^2.0.20",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
@@ -11,7 +13,7 @@
     "googleapis": "^122.0.0",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
-    "stripe": "^12.13.0",
+    "stripe": "^12.14.0",
     "uuid": "^9.0.0"
   }
 }
